finished the pathplanner algorithm A*, created an interface of obstacles and added all obstacles to it created a singleton class to hold all the created obstacles